--- a/product.html
+++ b/product.html
@@ -55,6 +55,7 @@
     <script src="js/services/ProductManager.js"></script>
     <script src="js/services/CartManager.js"></script>
     <script src="js/services/VendorProfileManager.js"></script>
+    <script src="js/services/FavoriteManager.js"></script>
     <script src="js/components/Navbar.js"></script>
     <script src="js/components/Footer.js"></script>
     <script src="js/pages/product.js"></script>
