--- a/orders.html
+++ b/orders.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ประวัติการสั่งซื้อ - HiewHub</title>
+    <title>Order History</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -15,11 +15,11 @@
 
     <div class="max-w-4xl mx-auto px-4 py-8">
         <h1 class="text-2xl font-bold mb-6 flex items-center gap-2">
-            <i data-lucide="shopping-bag" class="text-red-500"></i> ประวัติการสั่งซื้อของฉัน
+            <i data-lucide="shopping-bag" class="text-red-500"></i> Order History
         </h1>
 
         <div id="orders-container" class="space-y-4">
-            <div class="text-center py-10 text-gray-500">กำลังโหลด...</div>
+            <div class="text-center py-10 text-gray-500">Loading...</div>
         </div>
     </div>
 
@@ -38,7 +38,7 @@
                 const orders = res.data;
 
                 if (orders.length === 0) {
-                    container.innerHTML = `<div class="text-center py-10 text-gray-500">ไม่มีประวัติการสั่งซื้อ</div>`;
+                    container.innerHTML = `<div class="text-center py-10 text-gray-500">No orders found</div>`;
                     return;
                 }
 
@@ -52,9 +52,8 @@
                     };
                     const statusLabel = statusColors[order.status] || 'bg-gray-100 text-gray-800';
 
-                    // ปุ่มลบจะโชว์เฉพาะสถานะ PENDING
                     const deleteBtn = order.status === 'PENDING'
-                        ? `<button onclick="cancelOrder('${order.id}')" class="text-red-500 text-sm hover:underline">ยกเลิกออเดอร์</button>`
+                        ? `<button onclick="cancelOrder('${order.id}')" class="text-red-500 text-sm hover:underline">Cancel Order</button>`
                         : '';
 
                     return `
@@ -63,12 +62,12 @@
                             
                             <div class="flex-1">
                                 <div class="flex justify-between items-start">
-                                    <h3 class="font-bold text-lg">${order.vendorProduct?.title || 'สินค้าไม่ทราบชื่อ'}</h3>
+                                    <h3 class="font-bold text-lg">${order.vendorProduct?.title || 'Unknown Product'}</h3>
                                     <span class="px-3 py-1 rounded-full text-xs font-semibold ${statusLabel}">${order.status}</span>
                                 </div>
-                                <p class="text-gray-500 text-sm">ร้าน: ${order.vendor?.shopName || '-'}</p>
-                                <p class="text-gray-500 text-sm">จำนวน: ${order.quantity} ชิ้น | รวม: <span class="text-red-600 font-bold">${order.totalPrice.toLocaleString()} บาท</span></p>
-                                <p class="text-xs text-gray-400 mt-1">สั่งเมื่อ: ${new Date(order.createdAt).toLocaleString('th-TH')}</p>
+                                <p class="text-gray-500 text-sm">Shop: ${order.vendor?.shopName || '-'}</p>
+                                <p class="text-gray-500 text-sm">Qty: ${order.quantity} | Total: <span class="text-red-600 font-bold">${order.totalPrice.toLocaleString()} THB</span></p>
+                                <p class="text-xs text-gray-400 mt-1">Date: ${new Date(order.createdAt).toLocaleString('th-TH')}</p>
                             </div>
                             
                             <div class="flex flex-col items-end gap-2">
@@ -79,22 +78,22 @@
                 }).join('');
 
             } catch (err) {
-                container.innerHTML = `<div class="text-red-500 text-center">โหลดข้อมูลไม่สำเร็จ: ${err.message}</div>`;
+                container.innerHTML = `<div class="text-red-500 text-center">Failed to load orders: ${err.message}</div>`;
             }
         });
 
         window.cancelOrder = async (id) => {
             const result = await Swal.fire({
-                title: 'ยกเลิกออเดอร์?', text: "คุณแน่ใจหรือไม่ที่จะยกเลิกรายการนี้", icon: 'warning',
-                showCancelButton: true, confirmButtonColor: '#d33', confirmButtonText: 'ใช่, ยกเลิกเลย'
+                title: 'Cancel Order?', text: "Are you sure?", icon: 'warning',
+                showCancelButton: true, confirmButtonColor: '#d33', confirmButtonText: 'Yes, cancel'
             });
 
             if (result.isConfirmed) {
                 try {
                     await OrderManager.deleteOrder(id);
-                    Swal.fire('สำเร็จ', 'ยกเลิกออเดอร์แล้ว', 'success').then(() => location.reload());
+                    Swal.fire('Success', 'Order cancelled', 'success').then(() => location.reload());
                 } catch (err) {
-                    Swal.fire('ผิดพลาด', err.message, 'error');
+                    Swal.fire('Error', err.message, 'error');
                 }
             }
         }
