--- a/shop.html
+++ b/shop.html
@@ -13,6 +13,7 @@
         .modal-scroll::-webkit-scrollbar {
             width: 8px;
         }
+
         .modal-scroll::-webkit-scrollbar-thumb {
             background-color: #cbd5e1;
             border-radius: 4px;
@@ -67,6 +68,11 @@
                         <button id="add-product-btn" onclick="shopManager.openAddProductModal()"
                             class="hidden flex items-center gap-2 bg-green-600 text-white px-5 py-2.5 rounded-lg hover:bg-green-700 transition font-medium shadow-md">
                             <i data-lucide="plus-circle" class="w-5 h-5"></i> เพิ่มสินค้าใหม่
+                        </button>
+
+                        <button id="view-orders-btn" onclick="shopManager.viewOrders()"
+                            class="hidden flex items-center gap-2 bg-indigo-600 text-white px-5 py-2.5 rounded-lg hover:bg-indigo-700 transition font-medium shadow-md">
+                            <i data-lucide="clipboard-list" class="w-5 h-5"></i> รายการคำสั่งซื้อ
                         </button>
 
                         <button id="view-wishlist-requests-btn" onclick="shopManager.viewWishlistRequests()"
@@ -134,7 +140,7 @@
 
             <form id="add-product-form" onsubmit="shopManager.addProductOrUpdate(event)" class="p-6 space-y-5">
                 <input type="hidden" id="product-id-to-edit" name="productId" value="">
-                
+
                 <div>
                     <label for="title" class="block text-sm font-semibold text-gray-700 mb-2">ชื่อสินค้า <span
                             class="text-red-500">*</span></label>
@@ -182,7 +188,8 @@
                 </div>
 
                 <div>
-                    <label for="hashtag" class="block text-sm font-semibold text-gray-700 mb-2">Hashtag (หนึ่งรายการต่อบรรทัด)</label>
+                    <label for="hashtag" class="block text-sm font-semibold text-gray-700 mb-2">Hashtag
+                        (หนึ่งรายการต่อบรรทัด)</label>
                     <textarea id="hashtag" name="hashtag" rows="2"
                         class="w-full px-4 py-3 border border-gray-200 rounded-xl focus:ring-2 focus:ring-blue-500 focus:border-transparent transition"
                         placeholder="#ของใหม่&#10;#พร้อมส่ง"></textarea>
@@ -190,7 +197,8 @@
 
 
                 <div>
-                    <label for="images" class="block text-sm font-semibold text-gray-700 mb-2">URL รูปภาพ (หนึ่ง URL ต่อบรรทัด)</label>
+                    <label for="images" class="block text-sm font-semibold text-gray-700 mb-2">URL รูปภาพ (หนึ่ง URL
+                        ต่อบรรทัด)</label>
                     <textarea id="images" name="images" rows="4"
                         class="w-full px-4 py-3 border border-gray-200 rounded-xl focus:ring-2 focus:ring-blue-500 focus:border-transparent transition"
                         placeholder="https://example.com/img1.jpg&#10;https://example.com/img2.jpg"></textarea>
