--- a/aboutme.html
+++ b/aboutme.html
@@ -79,12 +79,14 @@
 
   </div>
 
-
+  <chat-widget></chat-widget>
   <footer-eiei></footer-eiei>
   <script src="js/config.js"></script>
   <script src="js/services/AuthManager.js"></script>
   <script src="js/services/CartManager.js"></script>
+  <script src="js/services/ChatManager.js"></script>
   <script src="js/components/Navbar.js"></script>
+  <script src="js/components/ChatWidget.js"></script>
   <script src="js/components/Footer.js"></script>
   <script src="js/pages/index.js"></script>
 </body>
