--- a/dashboard.html
+++ b/dashboard.html
@@ -157,12 +157,15 @@
         </main>
     </div>
 
+    <chat-widget></chat-widget>
     <footer-eiei></footer-eiei>
-
+    
     <script src="js/config.js"></script>
     <script src="js/services/AuthManager.js"></script>
     <script src="js/services/AdminManager.js"></script>
     <script src="js/services/VendorManager.js"></script>
+    <script src="js/services/ChatManager.js"></script>
+    <script src="js/components/ChatWidget.js"></script>
     <script src="js/components/Navbar.js"></script>
     <script src="js/components/Footer.js"></script>
     <script src="js/pages/dashboard.js"></script>
