--- a/favorite.html
+++ b/favorite.html
@@ -36,13 +36,15 @@
             <a href="/index.html" class="text-blue-600 hover:underline mt-2 inline-block">ไปเลือกซื้อสินค้า</a>
         </div>
     </div>
-
+    <chat-widget></chat-widget>
     <footer-eiei></footer-eiei>
-
+    
     <script src="js/config.js"></script>
     <script src="js/services/AuthManager.js"></script>
     <script src="js/services/CartManager.js"></script>
     <script src="js/services/FavoriteManager.js"></script>
+    <script src="js/services/ChatManager.js"></script>
+    <script src="js/components/ChatWidget.js"></script>
     <script src="js/components/Navbar.js"></script>
     <script src="js/components/Footer.js"></script>
     <script src="js/pages/favorite.js"></script>
