--- a/shop.html
+++ b/shop.html
@@ -214,15 +214,18 @@
             </form>
         </div>
     </div>
-
+    <chat-widget></chat-widget>
     <footer-eiei></footer-eiei>
-
+    
     <script src="js/config.js"></script>
     <script src="js/services/AuthManager.js"></script>
     <script src="js/services/ProductManager.js"></script>
     <script src="js/services/CartManager.js"></script>
     <script src="js/services/VendorProfileManager.js"></script>
     <script src="js/services/ProductRequestManager.js"></script>
+    <script src="js/services/ChatManager.js"></script>
+    <script src="js/services/ChatManager.js"></script>
+    <script src="js/components/ChatWidget.js"></script>
     <script src="js/components/Navbar.js"></script>
     <script src="js/components/Footer.js"></script>
     <script src="js/pages/shop.js"></script>
