--- a/vendor-orders.html
+++ b/vendor-orders.html
@@ -38,10 +38,13 @@
         </div>
     </div>
 
+    <chat-widget></chat-widget>
     <script src="js/config.js"></script>
     <script src="js/services/AuthManager.js"></script>
     <script src="js/services/OrderManager.js"></script>
     <script src="js/components/Navbar.js"></script>
+    <script src="js/services/ChatManager.js"></script>
+    <script src="js/components/ChatWidget.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', async () => {
             if (window.lucide) window.lucide.createIcons();
