--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         class="hero grid lg:grid-cols-2 grid-cols-1 gap-[50px] items-center px-5 py-[80px] max-w-[1200px] mx-auto min-h-[85vh] text-center lg:text-left">
         <div class="hero-text">
             <h1 class="hero-anim" style="font-size: 3rem; font-weight: 800; line-height: 1.2; margin: 0;">
-                รับหิ้วสินค้า<br>จากต่างประเทศ
+                รับหิ้วสินค้า<br>ทั้งในประเทศ<br>และต่างประเทศ
             </h1>
             <h1 class="hero-anim" style="font-size: 2rem; font-weight: 700; color: #2563eb; margin: 10px 0;">
                 ของแท้ ส่งตรงถึงมือคุณ
@@ -32,7 +32,7 @@
             <p class="hero-anim"
                 style="font-size: 1.1rem; margin: 25px 0; color: #555; max-width: 500px; margin-left: auto; margin-right: auto; @media (min-width: 1024px) { margin-left: 0; margin-right: 0; }">
                 ไม่ต้องบินเองก็ได้ของแท้! เรารับหิ้วสินค้าแบรนด์ดังและของหายากจากทั่วโลก
-                บริการส่งด่วน มั่นใจได้รับของครบ ถูกต้อง และปลอดภัยทุกออเดอร์
+                บริการส่งด่วน มั่นใจได้รับของครบ ถูกต้อง และปลอดภัย <br>ทุกออเดอร์
             </p>
             <button
                 style="display: flex; gap: 8px; padding: 14px 30px; background: #10b981; color: #fff; border: none; border-radius: 50px; cursor: pointer; font-size: 1.1rem; font-weight: 600; align-items: center; transition: 0.3s; box-shadow: 0 10px 20px rgba(16, 185, 129, 0.3); margin: 0 auto;"
@@ -239,41 +239,15 @@
             </div>
         </div>
     </section>
-
-    <div
-       style="
-         position:fixed;
-         bottom:20px;
-         right:20px;
-         background:linear-gradient(135deg,#0838bb,#3805c5);
-         color:white;
-         border-radius:50px;
-         padding:12px 18px;
-         display:flex;
-         align-items:center;
-         gap:8px;
-         box-shadow:0 8px 20px rgba(0,0,0,0.2);
-         cursor:pointer;
-         font-weight:bold;
-         font-size:14px;
-         z-index:9999;
-         transition:transform 0.2s, box-shadow 0.2s;
-       "
-       onmouseover="this.style.transform='scale(1.1)'; this.style.boxShadow='0 12px 28px rgba(0,0,0,0.3)';"
-       onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 8px 20px rgba(0,0,0,0.2)';"
-  >
-    <i data-lucide="message-circle" style="width:20px; height:20px;"></i>
-    แชท
-    </div>  
-
-    </div>
-
+    <chat-widget></chat-widget>
     <footer-eiei></footer-eiei>
 
     <script src="js/config.js"></script>
     <script src="js/services/AuthManager.js"></script>
     <script src="js/services/CartManager.js"></script>
     <script src="js/components/Navbar.js"></script>
+    <script src="js/components/ChatWidget.js"></script>
+    <script src="js/services/ChatManager.js"></script>
     <script src="js/components/Footer.js"></script>
     <script src="js/pages/index.js"></script>
 </body>
