--- a/product.html
+++ b/product.html
@@ -47,15 +47,17 @@
             class="fixed right-5 bottom-5 bg-gray-900 text-white p-3 rounded-xl shadow-xl hidden z-[2000] font-bold"
             role="status" aria-live="polite"></div>
     </div>
-
+    <chat-widget></chat-widget>
     <footer-eiei></footer-eiei>
-
+    
     <script src="js/config.js"></script>
     <script src="js/services/AuthManager.js"></script>
     <script src="js/services/ProductManager.js"></script>
     <script src="js/services/CartManager.js"></script>
     <script src="js/services/VendorProfileManager.js"></script>
     <script src="js/services/FavoriteManager.js"></script>
+    <script src="js/services/ChatManager.js"></script>
+    <script src="js/components/ChatWidget.js"></script>
     <script src="js/components/Navbar.js"></script>
     <script src="js/components/Footer.js"></script>
     <script src="js/pages/product.js"></script>
