--- a/vendor-register.html
+++ b/vendor-register.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600&display=swap">
 
     <style>
@@ -53,14 +53,15 @@
                     </h3>
                     <div class="grid gap-5 pl-10">
                         <div>
-                            <label class="block text-sm font-medium text-gray-700 mb-1">ชื่อร้านค้า <span class="text-red-500">*</span></label>
-                            <input type="text" name="shopName" required 
+                            <label class="block text-sm font-medium text-gray-700 mb-1">ชื่อร้านค้า <span
+                                    class="text-red-500">*</span></label>
+                            <input type="text" name="shopName" required
                                 class="w-full px-3 py-2 border border-gray-300 rounded-lg text-base outline-none bg-white transition focus:border-purple-500 focus:ring-2 focus:ring-purple-200"
                                 placeholder="ตั้งชื่อร้านของคุณให้โดดเด่น">
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-1">รายละเอียดร้านค้า</label>
-                            <textarea name="shopDetail" rows="3" 
+                            <textarea name="shopDetail" rows="3"
                                 class="w-full px-3 py-2 border border-gray-300 rounded-lg text-base outline-none bg-white transition focus:border-purple-500 focus:ring-2 focus:ring-purple-200"
                                 placeholder="อธิบายเกี่ยวกับร้านค้า สินค้าที่ขาย หรือสโลแกน..."></textarea>
                         </div>
@@ -78,19 +79,27 @@
                     <div class="grid md:grid-cols-2 gap-5 pl-10">
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-1">ชื่อจริง (ตามบัตร)</label>
-                            <input type="text" id="v-firstname" name="firstname" class="w-full px-3 py-2 border border-gray-300 rounded-lg text-base outline-none bg-white transition focus:border-purple-500 focus:ring-2 focus:ring-purple-200" readonly>
+                            <input type="text" id="v-firstname" name="firstname"
+                                class="w-full px-3 py-2 border border-gray-300 rounded-lg text-base outline-none bg-white transition focus:border-purple-500 focus:ring-2 focus:ring-purple-200"
+                                readonly>
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-1">นามสกุล (ตามบัตร)</label>
-                            <input type="text" id="v-lastname" name="lastname" class="w-full px-3 py-2 border border-gray-300 rounded-lg text-base outline-none bg-white transition focus:border-purple-500 focus:ring-2 focus:ring-purple-200" readonly>
+                            <input type="text" id="v-lastname" name="lastname"
+                                class="w-full px-3 py-2 border border-gray-300 rounded-lg text-base outline-none bg-white transition focus:border-purple-500 focus:ring-2 focus:ring-purple-200"
+                                readonly>
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-1">เลขบัตรประชาชน</label>
-                            <input type="text" id="v-nationalId" name="nationalId" class="w-full px-3 py-2 border border-gray-300 rounded-lg text-base outline-none bg-white transition focus:border-purple-500 focus:ring-2 focus:ring-purple-200" readonly>
+                            <input type="text" id="v-nationalId" name="nationalId"
+                                class="w-full px-3 py-2 border border-gray-300 rounded-lg text-base outline-none bg-white transition focus:border-purple-500 focus:ring-2 focus:ring-purple-200"
+                                readonly>
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-1">เบอร์โทรศัพท์</label>
-                            <input type="text" id="v-phone" name="phone" class="w-full px-3 py-2 border border-gray-300 rounded-lg text-base outline-none bg-white transition focus:border-purple-500 focus:ring-2 focus:ring-purple-200" readonly>
+                            <input type="text" id="v-phone" name="phone"
+                                class="w-full px-3 py-2 border border-gray-300 rounded-lg text-base outline-none bg-white transition focus:border-purple-500 focus:ring-2 focus:ring-purple-200"
+                                readonly>
                         </div>
                     </div>
                 </div>
@@ -105,24 +114,27 @@
                     </h3>
                     <div class="grid md:grid-cols-2 gap-5 pl-10">
                         <div class="col-span-2">
-                            <label class="block text-sm font-medium text-gray-700 mb-1">บ้านเลขที่ / หมู่บ้าน / ถนน <span
+                            <label class="block text-sm font-medium text-gray-700 mb-1">บ้านเลขที่ / หมู่บ้าน / ถนน
+                                <span class="text-red-500">*</span></label>
+                            <input type="text" name="homeNumero" id="v-home" required
+                                class="w-full px-3 py-2 border border-gray-300 rounded-lg text-base outline-none bg-white transition focus:border-purple-500 focus:ring-2 focus:ring-purple-200">
+                        </div>
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-1">จังหวัด <span
                                     class="text-red-500">*</span></label>
-                            <input type="text" name="homeNumero" id="v-home" required 
+                            <input type="text" name="city" id="v-city" required
                                 class="w-full px-3 py-2 border border-gray-300 rounded-lg text-base outline-none bg-white transition focus:border-purple-500 focus:ring-2 focus:ring-purple-200">
                         </div>
                         <div>
-                            <label class="block text-sm font-medium text-gray-700 mb-1">จังหวัด <span class="text-red-500">*</span></label>
-                            <input type="text" name="city" id="v-city" required 
+                            <label class="block text-sm font-medium text-gray-700 mb-1">อำเภอ/เขต <span
+                                    class="text-red-500">*</span></label>
+                            <input type="text" name="district" id="v-district" required
                                 class="w-full px-3 py-2 border border-gray-300 rounded-lg text-base outline-none bg-white transition focus:border-purple-500 focus:ring-2 focus:ring-purple-200">
                         </div>
                         <div>
-                            <label class="block text-sm font-medium text-gray-700 mb-1">อำเภอ/เขต <span class="text-red-500">*</span></label>
-                            <input type="text" name="district" id="v-district" required 
-                                class="w-full px-3 py-2 border border-gray-300 rounded-lg text-base outline-none bg-white transition focus:border-purple-500 focus:ring-2 focus:ring-purple-200">
-                        </div>
-                        <div>
-                            <label class="block text-sm font-medium text-gray-700 mb-1">ตำบล/แขวง <span class="text-red-500">*</span></label>
-                            <input type="text" name="subdistrict" id="v-subdistrict" required 
+                            <label class="block text-sm font-medium text-gray-700 mb-1">ตำบล/แขวง <span
+                                    class="text-red-500">*</span></label>
+                            <input type="text" name="subdistrict" id="v-subdistrict" required
                                 class="w-full px-3 py-2 border border-gray-300 rounded-lg text-base outline-none bg-white transition focus:border-purple-500 focus:ring-2 focus:ring-purple-200">
                         </div>
                     </div>
@@ -149,10 +161,13 @@
             </form>
         </div>
     </div>
-
+    <chat-widget></chat-widget>
+    
     <script src="js/config.js"></script>
     <script src="js/services/AuthManager.js"></script>
     <script src="js/services/VendorManager.js"></script>
+    <script src="js/services/ChatManager.js"></script>
+    <script src="js/components/ChatWidget.js"></script>
     <script src="js/components/Navbar.js"></script>
     <script src="js/pages/vendor-register.js"></script>
 </body>
