--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 บริการส่งด่วน มั่นใจได้รับของครบ ถูกต้อง และปลอดภัย <br>ทุกออเดอร์
             </p>
             <button
+                onclick="window.location.href='/product.html'"
                 style="display: flex; gap: 8px; padding: 14px 30px; background: #10b981; color: #fff; border: none; border-radius: 50px; cursor: pointer; font-size: 1.1rem; font-weight: 600; align-items: center; transition: 0.3s; box-shadow: 0 10px 20px rgba(16, 185, 129, 0.3); margin: 0 auto;"
                 class="lg:ml-0">
                 <i data-lucide="shopping-cart" style="width: 1.2rem;"></i> สั่งหิ้วสินค้าตอนนี้
