--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         class="hero grid lg:grid-cols-2 grid-cols-1 gap-[50px] items-center px-5 py-[80px] max-w-[1200px] mx-auto min-h-[85vh] text-center lg:text-left">
         <div class="hero-text">
             <h1 class="hero-anim" style="font-size: 3rem; font-weight: 800; line-height: 1.2; margin: 0;">
-                รับหิ้วสินค้า<br>ทั้งในประเทศ<br>และต่างประเทศ
+                รับหิ้วสินค้า<br>ทั่วประเทศไทย<br
             </h1>
             <h1 class="hero-anim" style="font-size: 2rem; font-weight: 700; color: #2563eb; margin: 10px 0;">
                 ของแท้ ส่งตรงถึงมือคุณ
             </h1>
             <p class="hero-anim"
                 style="font-size: 1.1rem; margin: 25px 0; color: #555; max-width: 500px; margin-left: auto; margin-right: auto; @media (min-width: 1024px) { margin-left: 0; margin-right: 0; }">
-                ไม่ต้องบินเองก็ได้ของแท้! เรารับหิ้วสินค้าแบรนด์ดังและของหายากจากทั่วโลก
+                ไม่ต้องบินเองก็ได้ของแท้! เรารับหิ้วสินค้าแบรนด์ดังและของหายากจากทั่วไทย
                 บริการส่งด่วน มั่นใจได้รับของครบ ถูกต้อง และปลอดภัย <br>ทุกออเดอร์
             </p>
             <button
@@ -57,8 +57,8 @@
                 <p>ออเดอร์สำเร็จ</p>
             </div>
             <div class="stat-item">
-                <h3 class="font-bold text-[40px] text-[#2563eb] mb-[10px]">15+</h3>
-                <p>ประเทศที่รองรับ</p>
+                <h3 class="font-bold text-[40px] text-[#2563eb] mb-[10px]">0 ปี</h3>
+                <p>การบริการ</p>
             </div>
             <div class="stat-item">
                 <h3 class="font-bold text-[40px] text-[#2563eb] mb-[10px]">4.9/5</h3>
@@ -162,7 +162,7 @@
         </div>
     </section>
 
-    <section class="country py-[100px] bg-white overflow-hidden">
+    <!-- <section class="country py-[100px] bg-white overflow-hidden"> -->
         <div class="country-title text-center mb-[60px] px-5">
             <h2 class="font-bold text-[40px] m-0 mb-[10px]">ประเทศที่รับหิ้ว</h2>
             <p>ครอบคลุมแหล่งช้อปปิ้งชั้นนำทั่วโลก</p>
@@ -205,38 +205,7 @@
         </div>
         <div class="marquee-wrapper w-full overflow-hidden mb-[30px] flex">
             <div class="country-track track-2  flex gap-[30px] w-max pl-[30px]">
-                <img src="https://flagcdn.com/w320/us.png"
-                    class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/gb.png"
-                    class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/fr.png"
-                    class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/it.png"
-                    class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/de.png"
-                    class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/au.png"
-                    class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/ca.png"
-                    class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/ch.png"
-                    class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/us.png"
-                    class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/gb.png"
-                    class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/fr.png"
-                    class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/it.png"
-                    class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/de.png"
-                    class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/au.png"
-                    class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/ca.png"
-                    class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
-                <img src="https://flagcdn.com/w320/ch.png"
-                    class="flag-img object-cover rounded-xl shadow-xl transition-all duration-300 flex-shrink-0 lg:w-[180px] lg:h-[110px] w-[120px] h-[80px]">
+                
             </div>
         </div>
     </section>
