--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
 <body class="m-0 overflow-x-hidden text-[#333] leading-[1.5]">
     <navbar-eiei></navbar-eiei>
 
-    <section
-        class="hero grid lg:grid-cols-2 grid-cols-1 gap-[50px] items-center px-5 py-[80px] max-w-[1200px] mx-auto min-h-[85vh] text-center lg:text-left">
+    <section class="hero grid lg:grid-cols-2 grid-cols-1 gap-[50px] items-center px-5 py-[80px] max-w-[1200px] mx-auto min-h-[85vh] text-center lg:text-left">
         <div class="hero-text">
             <h1 class="hero-anim" style="font-size: 3rem; font-weight: 800; line-height: 1.2; margin: 0;">
-                รับหิ้วสินค้า<br>ทั่วประเทศไทย<br
+                รับหิ้วสินค้า<br>ทั่วประเทศไทย</h1>
             </h1>
             <h1 class="hero-anim" style="font-size: 2rem; font-weight: 700; color: #2563eb; margin: 10px 0;">
                 ของแท้ ส่งตรงถึงมือคุณ
